[package]
name = "node-bin"
version = "0.1.0"
authors = ["skitsanos <info@skitsanos.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
node-bindgen = { version = "4.0" }

[build-dependencies]
node-bindgen = { version = "4.0", features = ["build"] }